womtool/src/test/resources/validate/wdl/wdl_draft2/invalid/array_autoboxing/error.txt
ERROR: bad_is is declared as a Array[Int] but the expression evaluates to a Int:

  Array[Int] bad_is = i
             ^
